add file java.html

--- a/java.html
+++ b/java.html
@@ -5,11 +5,11 @@
 2.
 Створіть масив днів тижня. За допомогою циклу for виведіть всі дні тижня, а вихідні дні виведіть жирним.
 
-3.
-Дано масив arr. Знайдіть середнє арифметичне його елементів. Перевірте завдання на масиві з елементами 12, 15, 20, 25, 59, 79.
 
 4.
 Дано масив [ 'a', 'b', 'c']. Додайте йому в кінець елементи 1, 2, 3.
 
 5.
 Дано об'єкт {js: 'test', jq: 'hello', css: 'world'}. Отримайте масив його ключів.
+
+jh,jhk,
